--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header id="header">
             <nav id="nav">
                 <ul id="nav-nav" class="nav-mobile">
-                    <li id="mobile-home" class="robin" onclick="goToHome()">Home</li>
+                    <li onclick="goToHome()">Home</li>
                     <li onclick="goToAbout()">About</li>
                     <li onclick="goToProjects()">Projects</li>
                     <li onclick="goToTeam()">Team</li>
