--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="container-first">
                     <div class="col-1">
                         <i class="fas fa-mobile-alt"></i>
-                        <p>917-866-124X</p>
+                        <p x-ms-format-detection="none">917-866-124X</p>
                     </div>
                     <div class="col-2">
                         <i class="fas fa-map-marker-alt"></i>
