--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>x-development</title>
-    <link rel="icon" href="" type="" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/images/favicon16x16.png"
+    />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap"
       rel="stylesheet"
