--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/images/favicon16x16.png"
+      href="images/favicon16x16.png"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap"
