--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="images/favicon16x16.png"
+      href="/images/favicon16x16.png"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap"
@@ -109,17 +109,38 @@
       <div class="slideshow-container slider" id="home">
         <img
           class="slideshow-container__image"
-          src="images/slider/benjamin-child-90768-unsplash.jpg"
+          src="images/slider/benjamin-child-90768-unsplash-1250w.jpg"
+          srcset="
+            images/slider/benjamin-child-90768-unsplash-750w.jpg   750w,
+            images/slider/benjamin-child-90768-unsplash-950w.jpg   950w,
+            images/slider/benjamin-child-90768-unsplash-1250w.jpg 1250w,
+            images/slider/benjamin-child-90768-unsplash-1550w.jpg 1550w,
+            images/slider/benjamin-child-90768-unsplash-1850w.jpg 1850w
+          "
           alt="bright and spacious, large conference room"
         />
         <img
           class="slideshow-container__image"
-          src="images/slider/nastuh-abootalebi-284881-unsplash.jpg"
+          src="images/slider/nastuh-abootalebi-284881-unsplash-1250w.jpg"
+          srcset="
+            images/slider/nastuh-abootalebi-284881-unsplash-750w.jpg   750w,
+            images/slider/nastuh-abootalebi-284881-unsplash-950w.jpg   950w,
+            images/slider/nastuh-abootalebi-284881-unsplash-1250w.jpg 1250w,
+            images/slider/nastuh-abootalebi-284881-unsplash-1550w.jpg 1550w,
+            images/slider/nastuh-abootalebi-284881-unsplash-1850w.jpg 1850w
+          "
           alt="company's kitchen area, common area"
         />
         <img
           class="slideshow-container__image"
-          src="images/slider/nastuh-abootalebi-284882-unsplash.jpg"
+          src="images/slider/nastuh-abootalebi-284882-unsplash-1250w.jpg"
+          srcset="
+            images/slider/nastuh-abootalebi-284882-unsplash-750w.jpg   750w,
+            images/slider/nastuh-abootalebi-284882-unsplash-950w.jpg   950w,
+            images/slider/nastuh-abootalebi-284882-unsplash-1250w.jpg 1250w,
+            images/slider/nastuh-abootalebi-284882-unsplash-1550w.jpg 1550w,
+            images/slider/nastuh-abootalebi-284882-unsplash-1850w.jpg 1850w
+          "
           alt="hallway with the rooms and offices on both sides"
         />
         <div class="slideshow-container__overlay">
@@ -237,7 +258,12 @@
           <div class="projects__grid-container">
             <img
               class="projects__image"
-              src="images/projects/chris-barbalis-321810-unsplash.jpg"
+              src="images/projects/chris-barbalis-321810-unsplash-750w.jpg"
+              srcset="
+                images/projects/chris-barbalis-321810-unsplash-550w.jpg 550w,
+                images/projects/chris-barbalis-321810-unsplash-750w.jpg 750w,
+                images/projects/chris-barbalis-321810-unsplash-950w.jpg 950w
+              "
               alt="project one is detail of modern glass building's architecture"
             />
 
@@ -257,7 +283,11 @@
           <div class="projects__grid-container">
             <img
               class="projects__image"
-              src="images/projects/julius-drost-541943-unsplash.jpg"
+              src="images/projects/julius-drost-541943-unsplash-750w.jpg"
+              srcset="
+                images/projects/julius-drost-541943-unsplash-550w.jpg 550w,
+                images/projects/julius-drost-541943-unsplash-750w.jpg 750w
+              "
               alt="project two is reflection of glass ultramodern building in the business park"
             />
             <div class="projects__text">
@@ -276,7 +306,12 @@
           <div class="projects__grid-container">
             <img
               class="projects__image"
-              src="images/projects/luca-bravo-272609-unsplash.jpg"
+              src="images/projects/luca-bravo-272609-unsplash-750w.jpg"
+              srcset="
+                images/projects/luca-bravo-272609-unsplash-550w.jpg 550w,
+                images/projects/luca-bravo-272609-unsplash-750w.jpg 750w,
+                images/projects/luca-bravo-272609-unsplash-950w.jpg 950w
+              "
               alt="project three is high ceiling, white tuned shopping mall building interior"
             />
             <div class="projects__text">
@@ -295,7 +330,12 @@
           <div class="projects__grid-container">
             <img
               class="projects__image"
-              src="images/projects/bernard-hermant-638302-unsplash.jpg"
+              src="images/projects/bernard-hermant-638302-unsplash-750w.jpg"
+              srcset="
+                images/projects/bernard-hermant-638302-unsplash-550w.jpg 550w,
+                images/projects/bernard-hermant-638302-unsplash-750w.jpg 750w,
+                images/projects/bernard-hermant-638302-unsplash-950w.jpg 950w
+              "
               alt="project four is a modern architecture administrative building with interesting facade design"
             />
             <div class="projects__text">
