--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/images/favicon16x16.png"
+      href="images/favicon16x16.png"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap"
       rel="stylesheet"
     />
-    <link
+<!--     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
-    />
+    /> -->
     <link href="x-dev-main.css" rel="stylesheet" type="text/css" />
   </head>
 
