--- a/index.html
+++ b/index.html
@@ -405,13 +405,7 @@
             <p>office@x-dev.com</p>
           </div>
         </div>
-        <iframe defer
-          class="contact__google-maps"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.240604517652!2d-73.98253528459642!3d40.66866727933657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b02516dd59f%3A0xb41ac2ae7b7b7ee8!2s274+7th+Ave%2C+Brooklyn%2C+NY+11215%2C+USA!5e0!3m2!1sen!2sat!4v1543330812909"
-          frameborder="0"
-          style="border:0"
-          allowfullscreen
-        ></iframe>
+        <iframe class="contact__google-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7558.613168217095!2d-73.98019804526565!3d40.668432398861654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b02516dd59f%3A0xb41ac2ae7b7b7ee8!2s274+7th+Ave%2C+Brooklyn%2C+NY+11215%2C+USA!5e0!3m2!1sen!2sat!4v1558531341254!5m2!1sen!2sat" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </main>
 
