--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <div class="contact__google-maps">
           <img
             class="contact__google-maps-image"
-            src="images/google maps.png"
+            src="images/google-maps.png"
             alt="google maps"
           />
         </div>
