--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     />
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
     />
     <link href="x-dev-main.css" rel="stylesheet" type="text/css" />
@@ -189,7 +189,11 @@
           <div class="about__container">
             <img
               class="about__image"
-              src="images/about/alex-mihis-83335-unsplash.jpg"
+              src="images/about/alex-mihis-83335-unsplash-510w.jpg"
+              srcset="
+                images/about/alex-mihis-83335-unsplash-510w.jpg 510w,
+                images/about/alex-mihis-83335-unsplash-910w.jpg 910w
+              "
               alt="glass business building representing company's development activities"
             />
             <div class="about__text">
@@ -205,7 +209,11 @@
           <div class="about__container">
             <img
               class="about__image"
-              src="images/about/rawpixel-579221-unsplash.jpg"
+              src="images/about/rawpixel-579221-unsplash-510w.jpg"
+              srcset="
+                images/about/rawpixel-579221-unsplash-510w.jpg 510w,
+                images/about/rawpixel-579221-unsplash-910w.jpg 910w
+              "
               alt="hands holding tablet device displaying finance report with graphs and numbers"
             />
             <div class="about__text">
@@ -221,7 +229,11 @@
           <div class="about__container">
             <img
               class="about__image"
-              src="images/about/rawpixel-567016-unsplash.jpg"
+              src="images/about/rawpixel-567016-unsplash-510w.jpg"
+              srcset="
+                images/about/rawpixel-567016-unsplash-510w.jpg 510w,
+                images/about/rawpixel-567016-unsplash-910w.jpg 910w
+              "
               alt="businessmen handshake representing partnership"
             />
             <div class="about__text">
@@ -237,8 +249,12 @@
           <div class="about__container">
             <img
               class="about__image"
-              src="images/about/new-data-services-746340-unsplash.jpg"
-              alt="stylish green chair among other white ones in the meeting room representing coopertion and dialog"
+              src="images/about/new-data-services-746340-unsplash-510w.jpg"
+              srcset="
+                images/about/new-data-services-746340-unsplash-510w.jpg 510w,
+                images/about/new-data-services-746340-unsplash-910w.jpg 910w
+              "
+              alt="stylish green chair among other white ones in the meeting room representing cooperation and dialog"
             />
             <div class="about__text">
               <h3 class="heading__3">Cooperation</h3>
