--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       sizes="16x16"
       href="images/favicon16x16.png"
     />
-    <link
+<!--     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap"
       rel="stylesheet"
-    />
+    /> -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
