--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap"
       rel="stylesheet"
     /> -->
-    <link
+<!--     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
-    />
+    /> -->
     <link href="x-dev-main.css" rel="stylesheet" type="text/css" />
   </head>
 
