--- a/index.html
+++ b/index.html
@@ -10,16 +10,12 @@
       sizes="16x16"
       href="images/favicon16x16.png"
     />
-<!--     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap"
-      rel="stylesheet"
-    /> -->
-<!--     <link
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
-    /> -->
+    />
     <link href="x-dev-main.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -409,15 +405,63 @@
         <h2 class="heading__2">CONTACT US</h2>
         <div class="contact__container">
           <div class="contact__col">
-            <i class="contact__col-icon fas fa-mobile-alt"></i>
+            <svg
+              class="contact__col-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="48"
+              height="48"
+              viewBox="0 0 24 24"
+              aria-labelledby="phoneIconTitle phoneIconDesc"
+              stroke="hsl(0, 0%, 25%)"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              fill="none"
+            >
+              <path
+                d="M12.7407967 18.4035953l3.1568602-3.1568603 5.2170191 3.638589-1.1702966 1.17029c-.7795137.7795137-1.9237564 1.0687025-2.9800292.7531543-3.2292334-.964693-6.1301018-2.7332912-8.70260528-5.3057946-2.57249972-2.5724997-4.34109651-5.4733635-5.30579038-8.70259126-.31556369-1.05627592-.0263733-2.20052643.75314555-2.98004528l1.17029455-1.17029455 3.63858894 5.21701908L5.36112331 11.023922"
+              />
+            </svg>
             <p x-ms-format-detection="none">917-866-124X</p>
           </div>
           <div class="contact__col">
-            <i class="contact__col-icon fas fa-map-marker-alt"></i>
+            <svg
+              class="contact__col-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="48"
+              height="48"
+              viewBox="0 0 24 24"
+              aria-labelledby="locationIconTitle locationIconDesc"
+              stroke="hsl(0, 0%, 25%)"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              fill="none"
+            >
+              <path
+                d="M12 21c4-4.2 6-8.2 6-12 0-3.3137085-2.6862915-6-6-6S6 5.6862915 6 9c0 3.8 2 7.8 6 12z"
+              />
+              <circle cx="12" cy="9" r="1" />
+            </svg>
             <p>274-292 7th Ave, Brooklyn,<br />NY 11215</p>
           </div>
           <div class="contact__col">
-            <i class="contact__col-icon far fa-envelope"></i>
+            <svg
+              class="contact__col-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="48"
+              height="48"
+              viewBox="0 0 24 24"
+              aria-labelledby="envelopeIconTitle envelopeIconDesc"
+              stroke="hsl(0, 0%, 25%)"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              fill="none"
+            >
+              <path d="M2 5h20v14H2z" />
+              <path d="M2 5l10 9 10-9M2 19l6.825-7.8M22 19l-6.844-7.822" />
+            </svg>
             <p>office@x-dev.com</p>
           </div>
         </div>
@@ -458,9 +502,39 @@
           <p>https://worldvectorlogo.com/</p>
         </div>
         <div class="footer__socials">
-          <i class="fab fa-facebook"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-twitter-square"></i>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="35"
+            height="35"
+            fill="hsl(0,0%,100%)"
+            viewBox="0 0 28 24"
+          >
+            <path
+              d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm3 8h-1.35c-.538 0-.65.221-.65.778V10h2l-.209 2H13v7h-3v-7H8v-2h2V7.692C10 5.923 10.931 5 13.029 5H15v3z"
+            />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="35"
+            height="35"
+            fill="hsl(0,0%,100%)"
+            viewBox="0 0 28 24"
+          >
+            <path
+              d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162S8.597 18.163 12 18.163s6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zM12 16c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
+            />
+          </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="35"
+            height="35"
+            fill="hsl(0,0%,100%)"
+            viewBox="0 0 28 24"
+          >
+            <path
+              d="M19 0H5C2.239 0 0 2.239 0 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5V5c0-2.761-2.238-5-5-5zm-.139 9.237c.209 4.617-3.234 9.765-9.33 9.765-1.854 0-3.579-.543-5.032-1.475 1.742.205 3.48-.278 4.86-1.359-1.437-.027-2.649-.976-3.066-2.28.515.098 1.021.069 1.482-.056-1.579-.317-2.668-1.739-2.633-3.26.442.246.949.394 1.486.411-1.461-.977-1.875-2.907-1.016-4.383 1.619 1.986 4.038 3.293 6.766 3.43C11.899 7.977 13.458 6 15.577 6c.943 0 1.797.398 2.395 1.037.748-.147 1.451-.42 2.086-.796-.246.767-.766 1.41-1.443 1.816.664-.08 1.297-.256 1.885-.517-.439.656-.996 1.234-1.639 1.697z"
+            />
+          </svg>
         </div>
       </div>
       <div class="footer__copyright">
@@ -472,8 +546,22 @@
         </p>
       </div>
     </footer>
-    <a href="#" class="btn-to-top" onclick="scrollToTop(event)">
-      <i class="btn-to-top__icon fas fa-chevron-up fa-3x"></i>
+    <a href="#" class="btn-to-top" onclick="scrollToTop(event)"
+      ><svg
+        class="btn-to-top__icon"
+        xmlns="http://www.w3.org/2000/svg"
+        width="48"
+        height="48"
+        viewBox="0 0 24 24"
+        aria-labelledby="chevronUpIconTitle chevronUpIconDesc"
+        stroke="hsl(0, 0%, 100%)"
+        stroke-width="3"
+        stroke-linecap="square"
+        stroke-linejoin="square"
+        fill="none"
+      >
+        <path d="M6 14l6-6 6 6" />
+      </svg>
     </a>
     <script src="slider.js"></script>
     <script src="x-dev-nav.js"></script>
