--- a/index.html
+++ b/index.html
@@ -483,8 +483,6 @@
             Photo by NEW DATA SERVICES on Unsplash<br />
             Photo by rawpixel on Unsplash
           </p>
-        </div>
-        <div class="footer__credits-second">
           <h4 class="heading__4">Projects</h4>
           <p>
             Photo by Bernard Hermant on Unsplash<br />
@@ -492,8 +490,13 @@
             Photo by Julius Drost on Unsplash<br />
             Photo by Luca Bravo on Unsplash
           </p>
+        </div>
+        <div class="footer__credits-second">
           <h4 class="heading__4">Partners</h4>
           <p>https://worldvectorlogo.com/</p>
+          <h4 class="heading__4">Icons</h4>
+          <p>https://www.ikonate.com</p>
+          <p>https://iconmonstr.com</p>
         </div>
         <div class="footer__socials">
           <svg
