--- a/index.html
+++ b/index.html
@@ -543,23 +543,25 @@
         </p>
       </div>
     </footer>
-    <a href="#" class="btn-to-top" onclick="scrollToTop(event)"
-      ><svg
-        class="btn-to-top__icon"
-        xmlns="http://www.w3.org/2000/svg"
-        width="48"
-        height="48"
-        viewBox="0 0 24 24"
-        aria-labelledby="chevronUpIconTitle chevronUpIconDesc"
-        stroke="hsl(0, 0%, 100%)"
-        stroke-width="3"
-        stroke-linecap="square"
-        stroke-linejoin="square"
-        fill="none"
-      >
-        <path d="M6 14l6-6 6 6" />
-      </svg>
-    </a>
+    <div class="btn-to-top-cont">
+      <a href="#" class="btn-to-top" onclick="scrollToTop(event)"
+        ><svg
+          class="btn-to-top__icon"
+          xmlns="http://www.w3.org/2000/svg"
+          width="48"
+          height="48"
+          viewBox="0 0 24 24"
+          aria-labelledby="chevronUpIconTitle chevronUpIconDesc"
+          stroke="hsl(0, 0%, 100%)"
+          stroke-width="3"
+          stroke-linecap="square"
+          stroke-linejoin="square"
+          fill="none"
+        >
+          <path d="M6 14l6-6 6 6" />
+        </svg>
+      </a>
+    </div>
     <script src="slider.js"></script>
     <script src="x-dev-nav.js"></script>
   </body>
